--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
     <html lang="en0-US">
         <head>
+            <!--css-->
             <link rel="stylesheet" href="style.css">
+
+            <!--Fonte Inter-->
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@400;500;700&display=swap" rel="stylesheet">
 
             <meta charset="UTF-8">
             <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,5 +16,73 @@
         </head>
 
         <body>
+            <header>
+                <div id="foto">
+                    <img src="https://avatars.githubusercontent.com/u/113365783?v=4" alt="Foto de perfil no Github de Vagner Junior">
+                    <h2>Vagner Natividade T. Junior</h2>
+                    <p>Fron End Developer</p>
+                </div>
+                
+                <!--Click-->
+                <div>
+                    <ul>
+                        <li>Brasil</li>
+                        <li>Rocketseat</li>
+                        <li>DevNatividade</li>
+                        <li>Vagner-Junior-47316921b</li>
+                        <li>VagnerJ57096610</li>
+                        <li>https;//DevNatividade.github.io/NLW-eSports-Explore/</li>
+                        <li>VagnerFlorindoJunior@gmail.com</li>
+                    </ul>
+
+                    <h2>Tecnologia </h2>
+                        <ul>
+                            <li>GIT</li>
+                            <li>GITHUB</li>
+                            <li>HTML</li>
+                            <li>CSS</li>
+                        </ul>
+                </div>
+            </header>
+
+            <main>
+                <div>
+                    <h2>My Projects</h2>
+                    <p>Veja todos</p>
+
+                    <h4>my-onix</h4>
+                    <p>Consulte os códigos de erro que aparecem no painel de veículo onix</p>
+                        <ul>
+                            <li>100</li>
+                            <li>100</li>
+                            <li>HTML</li>
+                        </ul>
+
+                    <h4>my-onix</h4>
+                    <p>Consulte os códigos de erro que aparecem no painel de veículo onix</p>
+                        <ul>
+                            <li>100</li>
+                            <li>100</li>
+                            <li>HTML</li>
+                        </ul>
+                        
+
+                </div>
+
+                <div>
+                    <h2>Recent Posts</h2>
+
+                    <div id="jobs">
+                        <img src="https://avatars.githubusercontent.com/u/113365783?v=4" alt="Foto de perfil no Github de Vagner Junior">
+                        <h4>N Job</h4>
+                        <p>2 anos atrás</p>
+
+                        <h6>N Jobs</h6>
+                            <ul>
+                                <li>HTML</li>
+                                <LI>CSS</LI>
+                            </ul>
+                    </div>
+                </div>
         </body>
     </html>
