Ended, mas irei deixar mais semantico e justificado.

--- a/index.html
+++ b/index.html
@@ -128,7 +128,33 @@
                     </main>
     
                     <footer>
-    
+
+
+                        <div id="posts">
+                            <h2>Recent Posts</h2>
+                            <div id="post">
+                                <div id="image-post">
+                                    <img src="https://avatars.githubusercontent.com/u/113365783?v=4" alt="Foto de perfil no Github de Vagner Junior">
+                                </div>
+
+                                <div id="info-post">
+                                    <div id="time-post">
+                                        <h4>Site de informções de jogos </h4>
+                                        <p>um mês atrás</p>
+                                    </div>
+
+                                    <div id="tech-post">
+                                        <p>Site de informções de jogos</p>
+                                         <ul>
+                                            <li>#HTML</li>
+                                            <li>#CSS</li>
+                                            <li>#GIT</li>
+                                            <li>#GITHUB</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </footer>
             </section>
         </body>
