--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
                         <div id="project-top-2">
                             <h4>
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-folder"><path d="M22 19a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h5l2 3h9a2 2 0 0 1 2 2z"></path></svg> 
-                                &ensp;my-onix
+                                &ensp; Empresa prestada
                             </h4>
-                            <p>Consulte os códigos de erro que aparecem no painel de veículo Onix</p>
+                            <p>o que foi feito</p>
                         </div>
 
                         <div id="project-bottom-2">
@@ -117,9 +117,9 @@
                         <div id="project-top-3">
                             <h4>
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-folder"><path d="M22 19a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h5l2 3h9a2 2 0 0 1 2 2z"></path></svg> 
-                                &ensp;my-onix
+                                &ensp;Empresa prestada
                             </h4>
-                            <p>Consulte os códigos de erro que aparecem no painel de veículo Onix</p>
+                            <p>o que foi feito</p>
                         </div>
 
                         <div id="project-bottom-3">
@@ -142,12 +142,12 @@
 
                         <div id="post-info">
                             <div id="time-ago">
-                                <h4>Site de informções de jogos</h4>
-                                <p>um mês atrás</p>
+                                <h4>O que foi feito</h4>
+                                <p>a quanto tempo</p>
                             </div>
 
                             <div id="rashtag">
-                                <p>Site de informções de jogos</p>
+                                <p>O que foi feito</p>
                                 <ul>
                                     <li>#HTML</li>
                                     <li>#CSS</li>
