--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
             <!--css-->
             <link rel="stylesheet" href="style.css">
             <!--icon-->
-            <link rel="shortcut icon" href="./favicon.ico" type="image/png">
+            <link rel="shortcut icon" href="./Assets/favicon.ico" type="image/png">
             <!--Fonte Inter-->
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
